<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_BIS00LH_IO" Id="{4f775445-2685-44fc-8a48-f8f22f27424b}">
    <Declaration><![CDATA[TYPE ST_BIS00LH_IO :
STRUCT
	IN: ST_BIS00LH_Inputs;
	OUT: ST_BIS00LH_Outputs;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>