<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="ST_BIS00LH_Outputs" Id="{45719a35-76d9-4387-ab1a-ade4dacb6008}">
    <Declaration><![CDATA[TYPE ST_BIS00LH_Outputs :
STRUCT
	ByteArr AT %Q* : ARRAY[0..9] OF BYTE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>