<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_BITHEADERIN" Id="{51448a61-195a-44f7-bd8b-4d5ee91b461b}">
    <Declaration><![CDATA[TYPE ST_BITHEADERIN :
STRUCT
	CP: BIT;
	AA: BIT;
	AE: BIT;
	AF: BIT;
	///unused
	Bit4: BIT;
	_TO: BIT;
	HF: BIT;
	BB: BIT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>