<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_BITHEADEROUT" Id="{6cba2a89-bd10-4729-8b3a-fec34a23046c}">
    <Declaration><![CDATA[TYPE ST_BITHEADEROUT :
STRUCT
	AV: BIT;
	///unused
	Bit1: BIT;
	GR: BIT;
	///unused
	Bit3: BIT;
	///unused
	Bit4: BIT;
	KA: BIT;
	TI: BIT;
	///unused
	Bit7: BIT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>